--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
                 <h1 class="display-3 text-white mb-3 barlow_famaily fw-bold">About Us</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center text-uppercase">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                        <li class="breadcrumb-item"><a href="./">Home</a></li>
+                        <li class="breadcrumb-item"><a href="javascript:void(0)">Pages</a></li>
                         <li class="breadcrumb-item text-white active" aria-current="page">ABOUT</li>
                     </ol>
                 </nav>
@@ -66,7 +66,7 @@
                         <div class="ps-4">
                             <h5 class="mb-3 barlow_famaily fw-bold bluefont">Quality Servicing</h5>
                             <p class="grayfont fw-normal fs-6">Diam dolor diam ipsum sit amet diam et eos erat ipsum</p>
-                            <a href="#" class="border-bottom bluefont fs-6">Read More</a>
+                            <a href="javascript:void(0)" class="border-bottom bluefont fs-6">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                         <div class="ps-4">
                             <h5 class="mb-3 barlow_famaily fw-bold bluefont">Expert Workers</h5>
                             <p class="grayfont fw-normal fs-6">Diam dolor diam ipsum sit amet diam et eos erat ipsum</p>
-                            <a href="#" class="border-bottom bluefont fs-6">Read More</a>
+                            <a href="javascript:void(0)" class="border-bottom bluefont fs-6">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                         <div class="ps-4">
                             <h5 class="mb-3 barlow_famaily fw-bold bluefont">Modern Equipment</h5>
                             <p class="grayfont fw-normal fs-6">Diam dolor diam ipsum sit amet diam et eos erat ipsum</p>
-                            <a href="#" class="border-bottom bluefont fs-6">Read More</a>
+                            <a href="javascript:void(0)" class="border-bottom bluefont fs-6">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="" class="red_btn">Read More<i class="fa fa-arrow-right ms-3"></i></a>
+                    <!-- <a href="" class="red_btn">Read More<i class="fa fa-arrow-right ms-3"></i></a> -->
                 </div>
             </div>
         </div>
@@ -258,71 +258,19 @@
     <!-- end TECHNICIANS -->
     
     <!-- start footer -->
-    <footer>
-        <div class="container-fluid bg-dark text-light footer pt-5 mt-5">
-            <div class="container py-lg-5 py-3">
-                <div class="row g-5">
-                    <div class="col-xxl-3 col-xl-3 col-md-6 footer1_text">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Address</h4>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>mail@domain.com</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a> 
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a> 
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a> 
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-xxl-3 col-xl-3 col-sm-6 footer1_text">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Opening Hours</h4>
-                        <h6 class="text-light barlow_famaily fw-bold">Monday - Friday:</h6>
-                        <p class="mb-4">09.00 AM - 09.00 PM</p>
-                        <h6 class="text-light barlow_famaily fw-bold">Saturday - Sunday:</h6>
-                        <p class="mb-0">09.00 AM - 12.00 PM</p>
-                    </div>
-                    <div class="col-xxl-3 col-xl-2 col-sm-6">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Services</h4>
-                        <a class="footer_ser" href="">Latest Cars</a>
-                        <a class="footer_ser" href="">Featured Car</a> 
-                        <a class="footer_ser" href="">Sell Your Car</a> 
-                        <a class="footer_ser" href="">Buy a Car</a> 
-                        <a class="footer_ser" href="">Strategy</a>
-                    </div>
-                    <div class="col-xxl-3 col-xl-4 col-md-6">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Newsletter</h4>
-                        <p class="footer1_text">We believe brand interaction is key in commu- nication. Real innovations and a positive customer experience are the heart of successful communication.</p>
-                        <div class="d-flex">
-                            <input type="text" class="border-0 outline-none py-2 mt-2 me-2 ps-2" placeholder="Email address">
-                            <button type="button" class="btn bgred py-2 mt-2 me-2">SignUp</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">© 
-                            <a class="border-bottom" href="">Your Site Name</a>, All Rights Reserved.Designed By 
-                            <a class="border-bottom" target="_blank" rel="nofollow noopener" href="">HTML Codex</a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="">Home</a> 
-                                <a href="">Cookies</a> 
-                                <a href="">Help</a> 
-                                <a href="">FAQs</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <footer id="footer"></footer>
+    <script>
+        fetch('footer.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('footer').innerHTML = data;
+        })
+        .catch(err => console.error('Failed to load inner.html:', err));
+    </script>
     <!-- end footer -->  
     <!-- start bottom-top btn -->
     <div class="bottom_top">
-        <a href="#" class="btn-lg btn-lg-square"><i class="fa-solid fa-arrow-up-long"></i></a>
+        <a href="javascript:void(0)" class="btn-lg btn-lg-square"><i class="fa-solid fa-arrow-up-long"></i></a>
     </div>
     
     <!-- end bottom-top btn -->
