--- a/blog.html
+++ b/blog.html
@@ -47,8 +47,8 @@
                 <h1 class="display-3 text-white mb-3 barlow_famaily fw-bold">Blog</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center text-uppercase">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                        <li class="breadcrumb-item"><a href="./">Home</a></li>
+                        <li class="breadcrumb-item"><a href="javascript:void(0)">Pages</a></li>
                         <li class="breadcrumb-item text-white active" aria-current="page">Blog</li>
                     </ol>
                 </nav>
@@ -214,14 +214,14 @@
                                 </div>
                                 <div class="blog_text">
                                     <div>
-                                        <a href="blogdetail.html" class="fs-3 barlow_famaily bluefont fw-bold mb-2">Top 10 Most Fuel-Efficient Cars On The Road</a>
+                                        <a href="blogdetail" class="fs-3 barlow_famaily bluefont fw-bold mb-2">Top 10 Most Fuel-Efficient Cars On The Road</a>
                                     </div>
                                     <div class="d-flex justify-content-between mb-2 pb-1 border-bottom">
                                         <div class="fs-6 barlow_famaily bluefont fw-normal">Anthony Miller</div>
                                         <div class="blog_date"><span class="ps-0"><i class="fa-regular fa-heart pe-1"></i>775</span><span><i class="fa-regular fa-message pe-1"></i>45</span><span class="border-0"><i class="fa-solid fa-share-nodes pe-1"></i>33</span></div>
                                     </div>
                                     <div class="colorfont fw-normal fs-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book It has survived not only five centuries, but also the</div>
-                                    <div><a href="blogdetail.html" class="read_more_btn">read more</a></div>
+                                    <div><a href="blogdetail" class="read_more_btn">read more</a></div>
                                 </div>
                             </div>
                         </li>
@@ -236,14 +236,14 @@
                                 </div>
                                 <div class="blog_text">
                                     <div>
-                                        <a href="blogdetail.html" class="fs-3 barlow_famaily bluefont fw-bold mb-2">Tap yourself on the back for being a savy car shopper</a>
+                                        <a href="blogdetail" class="fs-3 barlow_famaily bluefont fw-bold mb-2">Tap yourself on the back for being a savy car shopper</a>
                                     </div>
                                     <div class="d-flex justify-content-between mb-2 pb-1 border-bottom">
                                         <div class="fs-6 barlow_famaily bluefont fw-normal">Anthony Miller</div>
                                         <div class="blog_date"><span class="ps-0"><i class="fa-regular fa-heart pe-1"></i>775</span><span><i class="fa-regular fa-message pe-1"></i>45</span><span class="border-0"><i class="fa-solid fa-share-nodes pe-1"></i>33</span></div>
                                     </div>
                                     <div class="colorfont fw-normal fs-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book It has survived not only five centuries, but also the</div>
-                                    <div><a href="blogdetail.html" class="read_more_btn">read more</a></div>
+                                    <div><a href="blogdetail" class="read_more_btn">read more</a></div>
                                 </div>
                             </div>
                         </li>
@@ -258,14 +258,14 @@
                                 </div>
                                 <div class="blog_text">
                                     <div>
-                                        <a href="blogdetail.html" class="fs-3 barlow_famaily bluefont fw-bold mb-2">How The New Mercedes- Benz SLS AMG on the track</a>
+                                        <a href="blogdetail" class="fs-3 barlow_famaily bluefont fw-bold mb-2">How The New Mercedes- Benz SLS AMG on the track</a>
                                     </div>
                                     <div class="d-flex justify-content-between mb-2 pb-1 border-bottom">
                                         <div class="fs-6 barlow_famaily bluefont fw-normal">Anthony Miller</div>
                                         <div class="blog_date"><span class="ps-0"><i class="fa-regular fa-heart pe-1"></i>775</span><span><i class="fa-regular fa-message pe-1"></i>45</span><span class="border-0"><i class="fa-solid fa-share-nodes pe-1"></i>33</span></div>
                                     </div>
                                     <div class="colorfont fw-normal fs-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book It has survived not only five centuries, but also the</div>
-                                    <div><a href="blogdetail.html" class="read_more_btn">read more</a></div>
+                                    <div><a href="blogdetail" class="read_more_btn">read more</a></div>
                                 </div>
                             </div>
                         </li>
@@ -280,14 +280,14 @@
                                 </div>
                                 <div class="blog_text">
                                     <div>
-                                        <a href="blogdetail.html" class="fs-3 barlow_famaily bluefont fw-bold mb-2">We believe the cars we offer are the highest quality</a>
+                                        <a href="blogdetail" class="fs-3 barlow_famaily bluefont fw-bold mb-2">We believe the cars we offer are the highest quality</a>
                                     </div>
                                     <div class="d-flex justify-content-between mb-2 pb-1 border-bottom">
                                         <div class="fs-6 barlow_famaily bluefont fw-normal">Anthony Miller</div>
                                         <div class="blog_date"><span class="ps-0"><i class="fa-regular fa-heart pe-1"></i>775</span><span><i class="fa-regular fa-message pe-1"></i>45</span><span class="border-0"><i class="fa-solid fa-share-nodes pe-1"></i>33</span></div>
                                     </div>
                                     <div class="colorfont fw-normal fs-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book It has survived not only five centuries, but also the</div>
-                                    <div><a href="blogdetail.html" class="read_more_btn">read more</a></div>
+                                    <div><a href="blogdetail" class="read_more_btn">read more</a></div>
                                 </div>
                             </div>
                         </li>
@@ -302,14 +302,14 @@
                                 </div>
                                 <div class="blog_text">
                                     <div>
-                                        <a href="blogdetail.html" class="fs-3 barlow_famaily bluefont fw-bold mb-2">Tap yourself on the back for being a savy car shopper</a>
+                                        <a href="blogdetail" class="fs-3 barlow_famaily bluefont fw-bold mb-2">Tap yourself on the back for being a savy car shopper</a>
                                     </div>
                                     <div class="d-flex justify-content-between mb-2 pb-1 border-bottom">
                                         <div class="fs-6 barlow_famaily bluefont fw-normal">Anthony Miller</div>
                                         <div class="blog_date"><span class="ps-0"><i class="fa-regular fa-heart pe-1"></i>775</span><span><i class="fa-regular fa-message pe-1"></i>45</span><span class="border-0"><i class="fa-solid fa-share-nodes pe-1"></i>33</span></div>
                                     </div>
                                     <div class="colorfont fw-normal fs-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book It has survived not only five centuries, but also the</div>
-                                    <div><a href="blogdetail.html" class="read_more_btn">read more</a></div>
+                                    <div><a href="blogdetail" class="read_more_btn">read more</a></div>
                                 </div>
                             </div>
                         </li>
@@ -329,71 +329,19 @@
     </main>
     <!-- end contact -->
     <!-- start footer -->
-    <footer>
-        <div class="container-fluid bg-dark text-light footer pt-5 mt-5">
-            <div class="container py-lg-5 py-3">
-                <div class="row g-5">
-                    <div class="col-xxl-3 col-xl-3 col-md-6 footer1_text">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Address</h4>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>mail@domain.com</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a> 
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a> 
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a> 
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-xxl-3 col-xl-3 col-sm-6 footer1_text">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Opening Hours</h4>
-                        <h6 class="text-light barlow_famaily fw-bold">Monday - Friday:</h6>
-                        <p class="mb-4">09.00 AM - 09.00 PM</p>
-                        <h6 class="text-light barlow_famaily fw-bold">Saturday - Sunday:</h6>
-                        <p class="mb-0">09.00 AM - 12.00 PM</p>
-                    </div>
-                    <div class="col-xxl-3 col-xl-2 col-sm-6">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Services</h4>
-                        <a class="footer_ser" href="">Latest Cars</a>
-                        <a class="footer_ser" href="">Featured Car</a> 
-                        <a class="footer_ser" href="">Sell Your Car</a> 
-                        <a class="footer_ser" href="">Buy a Car</a> 
-                        <a class="footer_ser" href="">Strategy</a>
-                    </div>
-                    <div class="col-xxl-3 col-xl-4 col-md-6">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Newsletter</h4>
-                        <p class="footer1_text">We believe brand interaction is key in commu- nication. Real innovations and a positive customer experience are the heart of successful communication.</p>
-                        <div class="d-flex">
-                            <input type="text" class="border-0 outline-none py-2 mt-2 me-2 ps-2" placeholder="Email address">
-                            <button type="button" class="btn bgred py-2 mt-2 me-2">SignUp</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">© 
-                            <a class="border-bottom" href="">Your Site Name</a>, All Rights Reserved.Designed By 
-                            <a class="border-bottom" target="_blank" rel="nofollow noopener" href="">HTML Codex</a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="">Home</a> 
-                                <a href="">Cookies</a> 
-                                <a href="">Help</a> 
-                                <a href="">FAQs</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <footer id="footer"></footer>
+    <script>
+        fetch('footer.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('footer').innerHTML = data;
+        })
+        .catch(err => console.error('Failed to load inner.html:', err));
+    </script>
     <!-- end footer -->  
     <!-- start bottom-top btn -->
     <div class="bottom_top">
-        <a href="#" class="btn-lg btn-lg-square"><i class="fa-solid fa-arrow-up-long"></i></a>
+        <a href="javascript:void(0)" class="btn-lg btn-lg-square"><i class="fa-solid fa-arrow-up-long"></i></a>
     </div>
     
     <!-- end bottom-top btn -->
