--- a/header.html
+++ b/header.html
@@ -11,10 +11,10 @@
                     <span class="colorfont top_head_text">Mon - Fri : 09.00 AM - 09.00 PM</span>
                 </div>
                 <div class="col-md-auto ms-auto col-12 text-center social_icon">
-                    <a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-                    <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="javascript:void(0)" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="javascript:void(0)" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="javascript:void(0)" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="javascript:void(0)" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -43,34 +43,28 @@
                 <li class="main_menu_li bars">
                     <a href="service" class="main_a">Services</a>
                     <ul class="sub-menu">
-                        <li><a href="service">Services</a></li>
-                        <li><a href="servicesdetails">Services Details</a></li>
+                        <li><a href="service">Diagnostic Test</a></li>
+                        <li><a href="service">Engine Servicing</a></li>
+                        <li><a href="service">Tires Replacement</a></li>
+                        <li><a href="service">Oil Changing</a></li>
                     </ul>
                 </li>
                 <li class="main_menu_li">
                     <a href="blog" class="main_a">Blog</a>
-                    <ul class="sub-menu">
-                        <li><a href="blog">Blog</a></li>
-                        <li><a href="blogdetail">Blog Details</a></li>
-                    </ul>
                 </li>
                 <li class="main_menu_li">
                     <a href="gallery" class="main_a">Gallery</a>
                 </li>
                 <li class="main_menu_li">
-                    <a href="#" class="main_a">Pages</a>
+                    <a href="booking" class="main_a">Car Booking</a>
                     <ul class="sub-menu">
-                        <li><a href="booking">Car Booking</a></li>
-                        <li><a href="#">Car Sell</a></li>
-                        <li><a href="#">Car Repair</a></li>
-                        <li><a href="#">Technicians</a></li>
                         <li><a href="sign">Sign In</a></li>
                         <li><a href="404">404 Page</a></li>
                     </ul>
                 </li>
                 <li class="main_menu_li"><a href="contact" class="main_a">Contact</a></li>
             </ul>
-            <a href="#" class="get_btn bgred d-none d-xl-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="booking" class="get_btn bgred d-none d-xl-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- end logo header -->
