--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <div class="col-10 col-lg-7 text-center text-lg-start banner_text">
                                 <h6>// Car Servicing //</h6>
                                 <h1>Qualified Car Repair Service Center</h1>
-                                <a href="#" class="red_btn">Learn More<i class="fa fa-arrow-right ms-3"></i></a>
+                                <a href="service" class="red_btn">Learn More<i class="fa fa-arrow-right ms-3"></i></a>
                             </div>
                             <div class="col-lg-5 d-none d-lg-flex">
                                 <img class="img-fluid" src="img/carousel-1.png" alt="">
@@ -68,7 +68,7 @@
                             <div class="col-10 col-lg-7 text-center text-lg-start banner_text">
                                 <h6>// Car Servicing //</h6>
                                 <h1>Qualified Car Wash Service Center</h1>
-                                <a href="#" class="red_btn">Learn More<i class="fa fa-arrow-right ms-3"></i></a>
+                                <a href="service" class="red_btn">Learn More<i class="fa fa-arrow-right ms-3"></i></a>
                             </div>
                             <div class="col-lg-5 d-none d-lg-flex">
                                 <img class="img-fluid" src="img/carousel-2.png" alt="">
@@ -90,7 +90,7 @@
                         <div class="ps-4">
                             <h5 class="mb-3 barlow_famaily fw-bold bluefont">Quality Servicing</h5>
                             <p class="grayfont fw-normal fs-6">Diam dolor diam ipsum sit amet diam et eos erat ipsum</p>
-                            <a href="#" class="border-bottom bluefont fs-6">Read More</a>
+                            <a href="javascript:void(0)" class="border-bottom bluefont fs-6">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                         <div class="ps-4">
                             <h5 class="mb-3 barlow_famaily fw-bold bluefont">Expert Workers</h5>
                             <p class="grayfont fw-normal fs-6">Diam dolor diam ipsum sit amet diam et eos erat ipsum</p>
-                            <a href="#" class="border-bottom bluefont fs-6">Read More</a>
+                            <a href="javascript:void(0)" class="border-bottom bluefont fs-6">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                         <div class="ps-4">
                             <h5 class="mb-3 barlow_famaily fw-bold bluefont">Modern Equipment</h5>
                             <p class="grayfont fw-normal fs-6">Diam dolor diam ipsum sit amet diam et eos erat ipsum</p>
-                            <a href="#" class="border-bottom bluefont fs-6">Read More</a>
+                            <a href="javascript:void(0)" class="border-bottom bluefont fs-6">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="" class="red_btn">Read More<i class="fa fa-arrow-right ms-3"></i></a>
+                    <a href="about" class="red_btn">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                 </div>
             </div>
         </div>
@@ -203,108 +203,15 @@
     </div>
     <!-- end about -->
     <!-- strat services -->
-    <div class="py-lg-5 py-3">
-        <div class="container">
-            <div class="section_heading">
-                <h6>// Our Services //</h6>
-                <h1>Explore Our Services</h1>
-            </div>
-            <div class="row g-4">
-                <div class="col-lg-4">
-                    <div class="nav w-100 nav-pills me-4">
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4 active service_btn" data-bs-toggle="pill" data-bs-target="#tab-pane-1" type="button">
-                            <i class="fa fa-car-side fa-2x me-3"></i>
-                            <h4 class="m-0">Diagnostic Test</h4>
-                        </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4 service_btn" data-bs-toggle="pill" data-bs-target="#tab-pane-2" type="button">
-                            <i class="fa fa-car fa-2x me-3"></i>
-                            <h4 class="m-0">Engine Servicing</h4>
-                        </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-4 service_btn" data-bs-toggle="pill" data-bs-target="#tab-pane-3" type="button">
-                            <i class="fa fa-cog fa-2x me-3"></i>
-                            <h4 class="m-0">Tires Replacement</h4>
-                        </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start p-4 mb-0 service_btn" data-bs-toggle="pill" data-bs-target="#tab-pane-4" type="button">
-                            <i class="fa fa-oil-can fa-2x me-3"></i>
-                            <h4 class="m-0">Oil Changing</h4>
-                        </button>
-                    </div>
-                </div>
-                <div class="col-lg-8">
-                    <div class="tab-content w-100">
-                        <div class="tab-pane fade show active" id="tab-pane-1">
-                            <div class="row g-4">
-                                <div class="col-md-6 service_img">
-                                    <div class="position-relative h-100">
-                                        <img class="position-absolute" src="img/service-1.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-6 service_right">
-                                    <h3 class="mb-3">15 Years Of Experience In Auto Servicing</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                    <a href="#" class="red_btn">Read More<i class="fa fa-arrow-right ms-3"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="tab-pane-2">
-                            <div class="row g-4">
-                                <div class="col-md-6 service_img">
-                                    <div class="position-relative h-100">
-                                        <img class="position-absolute" src="img/service-2.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-6 service_right">
-                                    <h3 class="mb-3">15 Years Of Experience In Auto Servicing</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                    <a href="" class="red_btn">Read More<i class="fa fa-arrow-right ms-3"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="tab-pane-3">
-                            <div class="row g-4">
-                                <div class="col-md-6 service_img">
-                                    <div class="position-relative h-100">
-                                        <img class="position-absolute" src="img/service-3.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-6 service_right">
-                                    <h3 class="mb-3">15 Years Of Experience In Auto Servicing</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                    <a href="" class="red_btn">Read More<i class="fa fa-arrow-right ms-3"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="tab-pane-4">
-                            <div class="row g-4">
-                                <div class="col-md-6 service_img">
-                                    <div class="position-relative h-100">
-                                        <img class="position-absolute" src="img/service-4.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-6 service_right">
-                                    <h3 class="mb-3">15 Years Of Experience In Auto Servicing</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
-                                    <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                    <a href="" class="red_btn">Read More<i class="fa fa-arrow-right ms-3"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="py-lg-5 py-3" id="our-services"></div>
+    <script>
+        fetch('our-services.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('our-services').innerHTML = data;
+        })
+        .catch(err => console.error('Failed to load inner.html:', err));
+    </script>
     <!-- end services -->
     <!-- start form -->
     <div class="container-fluid booking my-lg-5 my-3">
@@ -344,7 +251,7 @@
                                     <textarea class="form-control border-0" placeholder="Special Request"></textarea>
                                 </div>
                                 <div class="col-12">
-                                    <a href="#" class="bgblue text-white w-100 py-3 fs-6 fw-medium text-uppercase" type="submit">Book Now</a>
+                                    <a href="javascript:void(0)" class="bgblue text-white w-100 py-3 fs-6 fw-medium text-uppercase" type="submit">Book Now</a>
                                 </div>
                             </div>
                         </form>
@@ -485,72 +392,20 @@
     </div>      
     <!-- end testimonialslider -->
     <!-- start footer -->
-    <footer>
-        <div class="container-fluid bg-dark text-light footer pt-5 mt-5">
-            <div class="container py-lg-5 py-3">
-                <div class="row g-5">
-                    <div class="col-xxl-3 col-xl-3 col-md-6 footer1_text">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Address</h4>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>mail@domain.com</p>
-                        <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a> 
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a> 
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a> 
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-xxl-3 col-xl-3 col-sm-6 footer1_text">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Opening Hours</h4>
-                        <h6 class="text-light barlow_famaily fw-bold">Monday - Friday:</h6>
-                        <p class="mb-4">09.00 AM - 09.00 PM</p>
-                        <h6 class="text-light barlow_famaily fw-bold">Saturday - Sunday:</h6>
-                        <p class="mb-0">09.00 AM - 12.00 PM</p>
-                    </div>
-                    <div class="col-xxl-3 col-xl-2 col-sm-6">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Services</h4>
-                        <a class="footer_ser" href="">Latest Cars</a>
-                        <a class="footer_ser" href="">Featured Car</a> 
-                        <a class="footer_ser" href="">Sell Your Car</a> 
-                        <a class="footer_ser" href="">Buy a Car</a> 
-                        <a class="footer_ser" href="">Strategy</a>
-                    </div>
-                    <div class="col-xxl-3 col-xl-4 col-md-6">
-                        <h4 class="text-light mb-4 fw-bold barlow_famaily">Newsletter</h4>
-                        <p class="footer1_text">We believe brand interaction is key in commu- nication. Real innovations and a positive customer experience are the heart of successful communication.</p>
-                        <div class="d-flex">
-                            <input type="text" class="border-0 outline-none py-2 mt-2 me-2 ps-2" placeholder="Email address">
-                            <button type="button" class="btn bgred py-2 mt-2 me-2">SignUp</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">© 
-                            <a class="border-bottom" href="">Your Site Name</a>, All Rights Reserved.Designed By 
-                            <a class="border-bottom" target="_blank" rel="nofollow noopener" href="">HTML Codex</a>
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="">Home</a> 
-                                <a href="">Cookies</a> 
-                                <a href="">Help</a> 
-                                <a href="">FAQs</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- end footer --> 
+    <footer id="footer"></footer>
+    <script>
+        fetch('footer.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('footer').innerHTML = data;
+        })
+        .catch(err => console.error('Failed to load inner.html:', err));
+    </script>
+    <!-- end footer -->  
 
     <!-- start bottom-top btn -->
     <div class="bottom_top">
-        <a href="#" class="btn-lg btn-lg-square"><i class="fa-solid fa-arrow-up-long"></i></a>
+        <a href="javascript:void(0)" class="btn-lg btn-lg-square"><i class="fa-solid fa-arrow-up-long"></i></a>
     </div>
     
     <!-- end bottom-top btn -->
